fix: wrong position of Container

--- a/frontend/src/widgets/Container/Container.module.scss
+++ b/frontend/src/widgets/Container/Container.module.scss
@@ -1,6 +1,6 @@
 .container {
   display: flex;
-  position: relative;
+  flex-direction: column;
 
   margin: 3rem auto;
 
